# pocket-cli

./: Cargo.toml  README.md
.github/workflows/: publish.yml  verify.yml
src/: add.rs  archive.rs  auth.rs  config.rs  delete.rs  favorite.rs  get.rs  main.rs  models.rs  output.rs  readd.rs  send.rs  tag.rs  tags.rs  unfavorite.rs
