[package]
name = "pocket-cli"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.10.16"
pocket = { git = "https://github.com/ozbe/rust-pocket.git", commit = "d153b966f5fa68387dc5fd104aca2cdccf987a0a" }
structopt = "0.3"