[package]
name = "pocket"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
confy = "0.3.1"
convey = "0.2.0"
hyper = "0.10.16"
pocket = { git = "https://github.com/ozbe/rust-pocket.git" }
serde = "1.0.111"
structopt = "0.3"
url = "1.0"