[package]
name = "pocket"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] } 
confy = "0.3.1"
hyper = "0.10.16"
pocket = { git = "https://github.com/ozbe/rust-pocket.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
toml = "0.5"
url = "1.0"
url_serde = "0.2.0"